<resources>
    <string name="app_name">BMI</string>
    <string name="bmi_height">身高(cm)</string>
    <string name="high_key">請輸入身高</string>
    <string name="bmi_weight">體重(kg)</string>
    <string name="weight_key">請輸入體重</string>
    <string name="bmi_btn">計算BMI值</string>
    <string name="bmi_result">你的 BMI 值是 </string>
    <string name="about_title"></string>//?
    <string name="about_msg">Android BMI</string>
    <string name="ok">給我算</string>
    <string name="nook">不算了</string>
    <string name="homepage">首頁</string>
    <string name="advice_light">你該多吃點</string>

    <string name="advice_average">身材很標準</string>

    <string name="advice_heavy">你該節食了</string>
    <string-array name="items">
        <item>關於</item>
        <item>結束</item>
        <item>項目1</item>
        <item>項目2</item>
        <item>項目3</item>
    </string-array>
    <string name="homepageurl">http://nkeegamedev.blogspot.tw/2011/03/blog-post_10.html</string>
</resources>
