<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
    android:columnCount="1"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"

            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:text="@string/bmi_height" />

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:hint="@string/high_key"
            android:inputType="textPersonName" />


        <TextView
            android:id="@+id/textView10"

            android:layout_width="113dp"
            android:layout_height="42dp"
            android:text="@string/bmi_weight" />
            android:textSize="25sp"

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:textSize="25sp"
            android:hint="@string/weight_key"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/submit"

            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_height="95dp"

            android:text="@string/bmi_btn" />


        <!--<Button-->
        <!--android:id="@+id/convertTemp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="溫度換算" />-->

        <!--<TextView-->
        <!--android:id="@+id/result"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text=""-->
        <!--style="@style/my_style"/>-->

        <!--<TextView-->
        <!--android:id="@+id/suggest"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text=""-->
        <!--android:textColor="@color/colorAccent"-->
        <!--style="@style/my_style"/>-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="637dp"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="256dp"
                android:layout_height="256dp"
android:background="@drawable/anim2"
                app:srcCompat="@drawable/big_mac" />





        </FrameLayout>

        <LinearLayout
            android:layout_width="148dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/tipText1"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.02"
                android:text="Tip1"
                android:textSize="25dp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tipText2"
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="Tip2"
                android:textSize="25dp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tipText3"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.03"
                android:text="Tip3"
                android:textSize="25dp"
                android:visibility="invisible"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>